--- a/google test.ipynb
+++ b/google test.ipynb
@@ -52,39 +52,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.462228785954936"
+       "2.584962500721156"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import math\n",
+    "math.log(6,2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.080070288241023"
+       "8"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "2**3"
+   ]
   }
  ],
  "metadata": {
