added floor div

--- a/google test.ipynb
+++ b/google test.ipynb
@@ -52,43 +52,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.584962500721156"
+       "3"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import math\n",
-    "math.log(6,2)"
+    "math.floor(math.log(10,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "16"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2**3"
+    "2**4"
    ]
   }
  ],
