--- a/google test.ipynb
+++ b/google test.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -61,35 +61,50 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
-    "math.floor(math.log(10,2))"
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=7\n",
+    "mask=1\n",
+    "y=math.ceil(math.log(x,2)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "2**4"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
