--- a/motion_IQ.ipynb
+++ b/motion_IQ.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -500,97 +500,139 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>47538</th>\n",
-       "      <td>10.84</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>-1.14</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>237.690</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <th>count</th>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
+       "      <td>47543.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47539</th>\n",
-       "      <td>10.79</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>-1.14</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>237.695</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>-2.000000e+00</td>\n",
-       "      <td>-5.000000e+00</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>43.015088</td>\n",
+       "      <td>37.372493</td>\n",
+       "      <td>-1.045346</td>\n",
+       "      <td>14.160088</td>\n",
+       "      <td>0.383988</td>\n",
+       "      <td>118.855000</td>\n",
+       "      <td>-0.057190</td>\n",
+       "      <td>-0.045559</td>\n",
+       "      <td>-0.121700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47540</th>\n",
-       "      <td>10.79</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>-1.17</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>237.700</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>-2.273737e-11</td>\n",
-       "      <td>-5.684342e-11</td>\n",
+       "      <th>std</th>\n",
+       "      <td>22.226229</td>\n",
+       "      <td>19.252329</td>\n",
+       "      <td>2.220487</td>\n",
+       "      <td>7.627903</td>\n",
+       "      <td>1.707409</td>\n",
+       "      <td>68.623131</td>\n",
+       "      <td>462.900423</td>\n",
+       "      <td>132.864701</td>\n",
+       "      <td>335.132529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47541</th>\n",
-       "      <td>10.89</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>-1.17</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>237.705</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.000000e+01</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-16.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-9.170000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1836.000000</td>\n",
+       "      <td>-405.000000</td>\n",
+       "      <td>-927.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47542</th>\n",
-       "      <td>10.84</td>\n",
-       "      <td>3.87</td>\n",
-       "      <td>-1.17</td>\n",
-       "      <td>1.38</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>237.710</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>27.150000</td>\n",
+       "      <td>24.680000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "      <td>9.080000</td>\n",
+       "      <td>-0.430000</td>\n",
+       "      <td>59.427500</td>\n",
+       "      <td>-210.000000</td>\n",
+       "      <td>-56.000000</td>\n",
+       "      <td>-143.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>41.160000</td>\n",
+       "      <td>35.710000</td>\n",
+       "      <td>-0.970000</td>\n",
+       "      <td>13.340000</td>\n",
+       "      <td>0.340000</td>\n",
+       "      <td>118.855000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-7.000000</td>\n",
+       "      <td>-18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>58.440000</td>\n",
+       "      <td>48.760000</td>\n",
+       "      <td>0.170000</td>\n",
+       "      <td>18.530000</td>\n",
+       "      <td>1.010000</td>\n",
+       "      <td>178.282500</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>142.430000</td>\n",
+       "      <td>136.160000</td>\n",
+       "      <td>12.110000</td>\n",
+       "      <td>55.890000</td>\n",
+       "      <td>15.870000</td>\n",
+       "      <td>237.710000</td>\n",
+       "      <td>4053.000000</td>\n",
+       "      <td>2032.000000</td>\n",
+       "      <td>5046.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        fork  rearWheel  frontForce  shock  rearForce     time  forkVelocity  \\\n",
-       "47538  10.84       3.82       -1.14   1.36       0.53  237.690          -5.0   \n",
-       "47539  10.79       3.82       -1.14   1.36       0.53  237.695          -5.0   \n",
-       "47540  10.79       3.77       -1.17   1.34       0.52  237.700          10.0   \n",
-       "47541  10.89       3.82       -1.17   1.36       0.52  237.705           5.0   \n",
-       "47542  10.84       3.87       -1.17   1.38       0.51  237.710          -5.0   \n",
+       "               fork     rearWheel    frontForce         shock     rearForce  \\\n",
+       "count  47543.000000  47543.000000  47543.000000  47543.000000  47543.000000   \n",
+       "mean      43.015088     37.372493     -1.045346     14.160088      0.383988   \n",
+       "std       22.226229     19.252329      2.220487      7.627903      1.707409   \n",
+       "min        0.000000      0.000000    -16.000000      0.000000     -9.170000   \n",
+       "25%       27.150000     24.680000     -2.000000      9.080000     -0.430000   \n",
+       "50%       41.160000     35.710000     -0.970000     13.340000      0.340000   \n",
+       "75%       58.440000     48.760000      0.170000     18.530000      1.010000   \n",
+       "max      142.430000    136.160000     12.110000     55.890000     15.870000   \n",
        "\n",
-       "       shockVelocity  rearVelocity  \n",
-       "47538   2.000000e+00  5.000000e+00  \n",
-       "47539  -2.000000e+00 -5.000000e+00  \n",
-       "47540  -2.273737e-11 -5.684342e-11  \n",
-       "47541   4.000000e+00  1.000000e+01  \n",
-       "47542   2.000000e+00  5.000000e+00  "
+       "               time  forkVelocity  shockVelocity  rearVelocity  \n",
+       "count  47543.000000  47543.000000   47543.000000  47543.000000  \n",
+       "mean     118.855000     -0.057190      -0.045559     -0.121700  \n",
+       "std       68.623131    462.900423     132.864701    335.132529  \n",
+       "min        0.000000  -1836.000000    -405.000000   -927.000000  \n",
+       "25%       59.427500   -210.000000     -56.000000   -143.000000  \n",
+       "50%      118.855000    -15.000000      -7.000000    -18.000000  \n",
+       "75%      178.282500     88.000000      11.000000     28.000000  \n",
+       "max      237.710000   4053.000000    2032.000000   5046.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.tail()"
+    "df2.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -48158,7 +48200,7 @@
          "xaxis": "x",
          "xbins": {
           "end": 4053.0000000036875,
-          "size": 25,
+          "size": 50,
           "start": -1836.0000000016717
          },
          "yaxis": "y"
@@ -95721,7 +95763,7 @@
          "xaxis": "x",
          "xbins": {
           "end": 5046.000000001513,
-          "size": 25,
+          "size": 50,
           "start": -926.999999998352
          },
          "yaxis": "y"
@@ -98587,6 +98629,10 @@
           0,
           1
          ],
+         "range": [
+          -1000,
+          1000
+         ],
          "zeroline": false
         },
         "yaxis": {
@@ -98611,9 +98657,10 @@
     "hist_data = [a,b]\n",
     "group_labels = ['fork','rear wheel'] # name of the dataset\n",
     "\n",
-    "fig = ff.create_distplot(hist_data, group_labels,show_rug=False, bin_size=25)\n",
+    "fig = ff.create_distplot(hist_data, group_labels,show_rug=False, bin_size=50\n",
+    "                         )\n",
     "# fig.update_yaxes(range=[0,0.05])\n",
-    "# fig.update_xaxes(range=[1,140])\n",
+    "fig.update_xaxes(range=[-1000,1000])\n",
     "fig.show()"
    ]
   }
