--- a/dtw.ipynb
+++ b/dtw.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fastdtw'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mspatial\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdistance\u001b[39;00m \u001b[39mimport\u001b[39;00m euclidean\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfastdtw\u001b[39;00m \u001b[39mimport\u001b[39;00m fastdtw\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fastdtw'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import numpy as np\n",
@@ -6761,15 +6773,24 @@
     }
    ],
    "source": [
-    "\n",
-    "shifted=[]\n",
-    "shiftedb=[]\n",
-    "for m in path:\n",
-    "    print(m)\n",
-    "    d=m[0]\n",
-    "    print(d)\n",
-    "    e=a[d]\n",
-    "    shifted.append(e)\n",
+    "result = []\n",
+    "for i in range(0,len(path)):\n",
+    "    result.append([df['DateTime'].iloc[path[i][0]],\n",
+    "    df['Power'].iloc[path[i][0]],\n",
+    "    df['Voltage'].iloc[path[i][1]]])\n",
+    "df_sync = pd.DataFrame(data=result,columns=['DateTime','Power','Voltage']).dropna()\n",
+    "df_sync = df_sync.drop_duplicates(subset=['DateTime'])\n",
+    "df_sync = df_sync.sort_values(by='DateTime')\n",
+    "df_sync = df_sync.reset_index(drop=True)\n",
+    "#df_sync.to_csv('C:/Users/.../synchronized_dataset.csv',index=False)\n",
+    "# shifted=[]\n",
+    "# shiftedb=[]\n",
+    "# for m in path:\n",
+    "#     print(m)\n",
+    "#     d=m[0]\n",
+    "#     print(d)\n",
+    "#     e=a[d]\n",
+    "#     shifted.append(e)\n",
     "\n"
    ]
   },
@@ -12917,7 +12938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
